src/objects/Doctor_Mastery_User_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Battlegroup_Stars__c</fullName>
        <label>Battlegroup Stars</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCE_Credits__c</fullName>
        <description>ClearChoice Continuing Education Credits</description>
        <inlineHelpText>ClearChoice Continuing Education Credits</inlineHelpText>
        <label>CCE Credits</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClearChoice_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClearChoice Doctor</label>
        <referenceTo>ClearChoice_Doctor__c</referenceTo>
        <relationshipLabel>Doctor Mastery User Snapshots</relationshipLabel>
        <relationshipName>Doctor_Mastery_User_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Mastery_Center_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor Mastery Center Snapshot</label>
        <referenceTo>Doctor_Mastery_Center_Snapshot__c</referenceTo>
        <relationshipLabel>Doctor Mastery User Snapshots</relationshipLabel>
        <relationshipName>Doctor_Mastery_User_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pacesetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pacesetter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Leadership_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Leadership Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Mastery_2_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Mastery 2 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Mastery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Mastery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rainmaker_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rainmaker Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scorecard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenure_Years__c</fullName>
        <label>Tenure Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Arches_Delivered__c</fullName>
        <label>Total Arches Delivered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doctor Mastery User Snapshot</label>
    <nameField>
        <label>Doctor Mastery User Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor Mastery User Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>